# adversarial-input-detection-sandbox

./: .gitignore  Cargo.toml  README.md
data/trained_models/: trained_mnist_model_50000_epochs.npz
data/trained_models/MNIST_digits/: trained_mnist_100_epochs.npz  trained_mnist_10_epochs.npz
src/: cli.rs  main.rs  model.rs
src/sub_programs/: mnist.rs  mod.rs  xor.rs  xor_model.rs
