[package]
name = "adversarial_observations"
version = "0.1.0"
authors = ["Isaac Chen"]
description = "An experimental sandbox for detecting adversarial inputs to a machine learning model"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { version = "0.11.2", features = ["numpy", "cuda"] }
indicatif = "0.17.3"
mnist = "0.5.0"
rand = "0.8.5"
